Fix dark mode colors for iOS, fix menu opening flicker on iOS

--- a/src/app/components/Hero/Hero.scss
+++ b/src/app/components/Hero/Hero.scss
@@ -15,7 +15,7 @@
     background-position: top center;
     background-attachment: fixed;
 
-    @media (max-width: 1000px) {
+    @media (max-width: 768px) {
       background-attachment: initial;
       background-position: center -40px;
       background-repeat: no-repeat;
@@ -43,8 +43,7 @@
       transform: translateY(20px);
       transition: 
         opacity 0.5s ease 0.5s,
-        transform 0.5s ease 0.5s,
-        color 0.1s ease-in-out 0.1s;
+        transform 0.5s ease 0.5s;
 
       @media (max-width: 1000px) {
         font-size: 60px;
@@ -55,9 +54,7 @@
         transform: translateY(40px);
         transition: 
           opacity 0.5s ease 1s, 
-          transform 0.5s ease 1s,
-          color 0.1s ease-in-out 0.1s;
-
+          transform 0.5s ease 1s;
 
         @media (max-width: 1000px) {
           font-size: 50px;
@@ -88,6 +85,10 @@
       @media (max-width: 1000px) {
         color: #fff;
       }
+    }
+
+    .hero-image {
+      background-blend-mode: luminosity;
     }
   }
 }
